tests/badly_positioned_react/badly_positioned_react.exp
Error ---------------------------------------------------------------------------------------------------- test.js:23:21

Cannot call `create` with `create1(...)` bound to `Component` because property `x` is missing in object type [1] but
exists in `Props` [2] in type argument `P` [3]. [prop-missing]

   test.js:23:21
    23| const Foo1 = create(create1(Foo));
                            ^^^^^^^^^^^^

References:
   test.js:6:34
     6|   Component: React.ComponentType<{...P, ...{}}>,
                                         ^^^^^^^^^^^^^ [1]
   test.js:21:35
    21| class Foo extends React.Component<Props> {}
                                          ^^^^^ [2]
   <BUILTINS>/react.js:247:38
   247|   declare export type ComponentType<-P> = React$ComponentType<P>;
                                             ^ [3]



Found 1 error
